--- a/M4/M4Module-master/app/src/main/res/layout/content_create_report.xml
+++ b/M4/M4Module-master/app/src/main/res/layout/content_create_report.xml
@@ -17,7 +17,6 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="25dp"
         android:orientation="horizontal"
         android:layout_below="@+id/location_button"
         android:layout_alignParentLeft="true"
@@ -71,10 +70,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Location"
-        android:layout_marginTop="13dp"
-        android:layout_below="@+id/etConditionSpinner"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/etContaminatePPM"
@@ -108,4 +105,12 @@
         android:layout_alignParentStart="true"
         android:text="Address"
         android:textSize="19sp" />
+
+    <Button
+        android:id="@+id/_existedPurity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Existed Location"
+        android:layout_below="@+id/linearLayout"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
