--- a/M4/M4Module-master/app/src/main/res/layout/content_create_source_report.xml
+++ b/M4/M4Module-master/app/src/main/res/layout/content_create_source_report.xml
@@ -51,10 +51,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:id="@+id/linearLayout"
-        android:layout_below="@+id/etConditionType_source"
+        android:layout_below="@+id/location_button_source"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
@@ -86,10 +86,10 @@
         android:id="@+id/location_button_source"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
+        android:text="Location"
+        android:layout_below="@+id/etConditionSpinner_source"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp"
-        android:text="Location" />
+        android:layout_marginTop="62dp" />
 
     <TextView
         android:id="@+id/addressTV_source"
